syntax = "proto3";

package dongle.auth;
option go_package = "github.com/kimsehyoung/dongle/api/proto/gen/go/authpb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    host: "__API_BASE_URL__";
    info: {
        title: "Dongle auth service";
        version: "0.0";
        description: "desc";
    }
    security_definitions: {
        security: {
            key: "bearer"
            value: {
                type: TYPE_API_KEY
                in: IN_HEADER
                name: "Authorization"
                description: "Authentication token, prefixed by Bearer: Bearer <token>"
            }
        }
    }
    security: {
        security_requirement: {
            key: "bearer"
        }
    }
};

// #######    Account    #######
message AccountRequest {
    string role = 1;
    string email = 2;
    string password = 3;
    string name = 4;
    string phone_number = 5;
}

message PasswordRequest {
    string password = 1;
    string newPassword = 2;
}

// #######    Login    #######
message CreateTokenRequest {
    string email = 1;
    string password = 2;
}
message TokenRequest {
    string refresh_token = 1;
}
message TokenResposne {
	string access_token = 1;
    string refresh_token = 2;
}


service Auth {
    // #######    Account    #######
    rpc CreateAccount (AccountRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/accounts"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: { } // Disable security (Authorization: Bearer <token>)
        };
    };
    rpc DeleteAccount (google.protobuf.Empty) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/accounts"
        };
    };
    rpc ChangePassword (PasswordRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/accounts/password"
            body: "*"
        };
    };
    rpc ConfirmPassword (PasswordRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/confirmations/password"
            body: "password"
        };
    };

    // #######    Login    #######
    rpc CreateToken (CreateTokenRequest) returns (TokenResposne) {
        option (google.api.http) = {
            post: "/login/token"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: { } // Disable security (Authorization: Bearer <token>)
        };
    };
    rpc RefreshToken (TokenRequest) returns (TokenResposne) {
        option (google.api.http) = {
            post: "/login/token/refresh"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: { } // Disable security (Authorization: Bearer <token>)
        };
    }
    rpc RevokeToken (TokenRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/login/token/revoke"
            body: "*"
        };
    };
}